tests/spec/pass/select_timeout.aja
ch = chan()

select:
    case recv(ch) as v:
        print(v)
    case timeout(5):
        print("timeout")
