tests/spec/fail/select_timeout_with_as.aja
select:
    case timeout(1) as t:
        print(t)
